# XML::TreePP Changes

2006/05/21 (0.16)
    * bug fix: character references support (since 0.14)
    * Encode::FB_XMLCREF support (again)
    * new test: 18_escape_amp.t

2006/05/15 (0.14)
    * new encodings: eucJP-win and eucJP-ms (for Perl 5.005/5.6.1)
    * new entity references: &apos;
    * character references supported: &#38; &#x26;
    * spaces in text node are not deleted on parse() method.
    * returns are not added in text node on write() method.
    * HTTP tests are skipped per default: 09_http-lite.t 10_http-lwp.t
    * new tests: 00_pod.t 13_encoding_en.t 14_encoding_zh.t
                 15_encoding_ja.t 16_encoding_ko.t 17_output_encoding.t

2006/04/30 (0.10)
    * attr_prefix parameter added to emulate E4X, ECMAScript for XML.
    * user_agent parameter and its default value added.
    * source code passed perltidy. (thanks to Nadim)

2006/04/08 (0.08)
    * set() and get() method added.
    * cdata_scalar_ref option added. CDATASection's round trip supported.
    * some error checkes added. (thanks to Nadim)

2006/03/09 (0.07)
    * Correct POD about parsehttp() method

2006/03/02 (0.06)
    * parsehttp() method now supports the HTTP::Lite pure Perl module as well.
    * Bug fix: xml_escape() call in hash_to_xml() method. (thanks to suVene)

2006/02/26 (0.04)
    * Correct POD about force_array option of new() method.
    * parsehttp() method returns a hash tree and xml source on array context.

2006/02/22 (0.03)
    + Changes

2006/02/21 (0.02)
    * Change encoding from ISO-8859-1 to UTF-8 is natively supported.
    + t/force_array.t t/parse.t t/parsefile.t t/parsehttp.t t/write.t
      t/index.rdf t/family.xml
    * Test scripts added.

2006/02/20  (0.01)
    * first release.

# http://www.kawa.net/works/perl/treepp/treepp-e.html       (English)
# http://www.kawa.net/works/perl/treepp/treepp.html#changes (Japanese)